[package]
name = "ipc_actors"
description = "Collection of all IPC actors related modules"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["ConsensusLab", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/consensus-shipyard/ipc-actors"
keywords = ["filecoin", "web3", "wasm", "ipc"]

[workspace]
members = [
    "gateway",
    "subnet-actor",
    "sdk",
    "atomic-exec",
    "atomic-exec/primitives",
    "atomic-exec/examples/fungible-token",
]

# [patch.crates-io]
# primitives = { path = "../fvm-utils/primitives" }
# fil_actors_runtime = { path = "../fvm-utils/runtime" }

# [patch.crates-io]
# primitives = { git = "https://github.com/consensus-shipyard/fvm-utils", rev = "eff7df493789dec885578dc765a9fa1d7d012ec8" }
# fil_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", rev = "eff7df493789dec885578dc765a9fa1d7d012ec8" }

[patch."https://github.com/consensus-shipyard/fvm-utils"]
primitives = { path = "../fvm-utils/primitives" }
fil_actors_runtime = { path = "../fvm-utils/runtime" }