[package]
name = "ipc_actors"
description = "Collection of all IPC actors related modules"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["ConsensusLab", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/consensus-shipyard/ipc-actors"
keywords = ["filecoin", "web3", "wasm", "ipc"]

[workspace]
members = [
    "gateway",
    "subnet-actor",
    "sdk",
    "atomic-exec",
    "atomic-exec/primitives",
    "atomic-exec/examples/fungible-token",
]

# Uncomment to point to you local versions
# [patch."https://github.com/consensus-shipyard/fvm-utils"]
# primitives = { path = "../fvm-utils/primitives" }
# fil_actors_runtime = { path = "../fvm-utils/runtime" }

[profile.wasm]
inherits = "release"
# This needs to be unwind, not abort, so that we can handle panics within our panic hook.
panic = "unwind"
overflow-checks = true
lto = "thin"
opt-level = 3
strip = true
codegen-units = 1
incremental = false
