[package]
name = "ipc-actor-common"
description = "The common code used by both gateway actor and subnet actor, but not by sdk exposed to users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
log = "0.4.17"
primitives = { git = "https://github.com/consensus-shipyard/fvm-utils" }
ipc-sdk = { path = "../sdk" }
num-traits = "0.2.14"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
lazy_static = "1.4.0"
serde_tuple = "0.5"
serde = { version = "1.0.136", features = ["derive"] }
fvm_shared = { version = "=3.0.0-alpha.17", default-features = false }
thiserror = "1.0.38"
fil_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor"] }
integer-encoding = { version = "3.0.3", default-features = false }

[dev-dependencies]
serde_json = "1.0.95"
cid = "0.8.6"