[package]
description = "The common code used by both gateway actor and subnet actor, but not by sdk exposed to users"
edition = "2021"
name = "ipc-actor-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
fil_actors_runtime = {git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor"]}
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_shared = {version = "=3.2.0", default-features = false}
integer-encoding = {version = "3.0.3", default-features = false}
ipc-sdk = {path = "../sdk"}
lazy_static = "1.4.0"
log = "0.4.17"
num-traits = "0.2.14"
primitives = {git = "https://github.com/consensus-shipyard/fvm-utils"}
serde = {version = "1.0.136", features = ["derive"]}
serde_tuple = "0.5"
thiserror = "1.0.38"

[dev-dependencies]
cid = "0.8.6"
serde_json = "1.0.95"
