[package]
authors = ["ConsensusLab", "Protocol Labs", "Filecoin Core Devs"]
description = "IPC Gateway Actor"
edition = "2021"
keywords = ["filecoin", "web3", "wasm", "ipc"]
license = "MIT OR Apache-2.0"
name = "ipc-gateway"
repository = "https://github.com/consensus-shipyard/ipc-actors"
version = "0.0.1"

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.56"
cid = {version = "0.8.3", default-features = false, features = ["serde-codec"]}
fil_actors_runtime = {git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor"]}
frc42_dispatch = "3.2.0"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_ipld_hamt = "0.5.1"
fvm_shared = {version = "=3.2.0", default-features = false}
indexmap = {version = "1.8.0", features = ["serde-1"]}
integer-encoding = {version = "3.0.3", default-features = false}
ipc-actor-common = {path = "../common"}
ipc-sdk = {path = "../sdk"}
lazy_static = "1.4.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
primitives = {git = "https://github.com/consensus-shipyard/fvm-utils"}
serde = {version = "1.0.136", features = ["derive"]}
serde_tuple = "0.5"
thiserror = "1.0.37"
unsigned-varint = "0.7.1"

[dev-dependencies]
# enable test_utils feature only in dev env
base64 = "0.13.1"
env_logger = "0.10.0"
fil_actors_runtime = {git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor", "test_utils"]}

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"

[features]
fil-gateway-actor = []
