[package]
authors = ["ConsensusLab", "Protocol Labs", "Filecoin Core Devs"]
description = "Common types and util functions for IPC actors"
edition = "2021"
keywords = ["filecoin", "web3", "wasm", "ipc"]
license = "MIT OR Apache-2.0"
name = "ipc-sdk"
repository = "https://github.com/consensus-shipyard/ipc-actors"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
fil_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", optional = true, features = [
  "fil-actor",
] }
fnv = "1.0.7"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_ipld_hamt = "0.6"
fvm_shared = { version = "=3.2.0", default-features = false }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
num-traits = "0.2.14"
primitives = { git = "https://github.com/consensus-shipyard/fvm-utils" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
thiserror = "1.0.38"

[dev-dependencies]
serde_json = "1.0.95"


[features]
default = []
fil-actor = ["fil_actors_runtime"]
