[package]
name = "ipc_atomic_exec_fungible_token_sample"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs and the contributors"]
edition = "2018"
repository = "https://github.com/consensus-shipyard/ipc-atomic-execution"
keywords = ["web3", "filecoin", "FVM", "inter-planetary consensus"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
ipc_atomic_execution = { path = "../../" }
ipc_atomic_execution_primitives = { path = "../../primitives/" }
ipc_gateway = { path = "../../../gateway", package = "ipc-gateway" }

fvm_primitives = { git = "https://github.com/consensus-shipyard/fvm-utils", package = "primitives" }
fvm_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", package = "fil_actors_runtime", features = ["fil-actor"] }

fvm_actor_utils = { version = "3.0.0", git = "https://github.com/helix-onchain/filecoin" }
frc42_macros = { version = "1.0.0", git = "https://github.com/helix-onchain/filecoin" }

fvm_shared = { version = "3.0.0-alpha.5", default-features = false }
fvm_ipld_hamt = "0.5.1"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.0"

cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
serde_tuple = "0.5"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
thiserror = "1.0.37"
integer-encoding = "3.0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
lazy_static = "1.4.0"

[dev-dependencies]
fvm_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", package = "fil_actors_runtime", features = ["fil-actor", "test_utils"] }

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"
